# breakthrough-technologies

./: pyproject.toml
notebooks/: 1breakthrough-technologies.csv  analysis.ipynb  breakthrough-technologies.csv  breakthrough_technologies.csv  model.py
